[package]
name = "guardgen"
version = "1.2.1"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/daisuke-nagao/GuardGen"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
uuid7 = "1.7.0"
wasm-bindgen = "0.2.100"
js-sys = "0.3"
once_cell = "1.20"
web-sys = { version = "0.3", features = ["Window", "Crypto"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.4.2", features = ["wasm_js"] }
console_error_panic_hook = "0.1.7"

[profile.release]
strip = "debuginfo"

[dev-dependencies]
regex = "1.12.3"
