[package]
name = "guardgen"
version = "1.2.1"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/daisuke-nagao/GuardGen"

[lib]
crate-type = ["rlib"]

[[bin]]
name = "guardgen"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
uuid7 = "1.7.0"

[profile.release]
strip = "debuginfo"

[dev-dependencies]
regex = "1.12.3"

