[package]
name = "guardgen"
version = "1.2.1"
edition = "2024"
license = "MIT"
readme = "README.md"
repository = "https://github.com/daisuke-nagao/GuardGen"
description = "GuardGen is a CLI tool for generating unique UUID v7 header guards for C/C++ files, ensuring conflict-free inclusion."

[lib]
name = "guardgen_lib"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "guardgen"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
uuid = { version = "1.23.1", features = ["rng-getrandom", "v4", "v7"] }

[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.4.2", features = ["wasm_js"] }
js-sys = "0.3.95"
wasm-bindgen = { version = "0.2.118" }
uuid = { version = "1.23.1", features = ["rng-getrandom", "v4", "v7", "js"] }

[profile.release]
strip = "debuginfo"
lto = true
codegen-units = 1

[dev-dependencies]
regex = "1.12.3"
